# lynq-task

./: .gitignore  README.md  pyproject.toml
agentic_challenge/: main.py
agentic_challenge/level1/: llm_call.py  pdf_reader.py
agentic_challenge/level2/: weather_app.py  weather_mcp.py
